Kubernetes/BastionResourceController-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bastion-controller-deployment
  namespace: bastion-system
  labels:
    app: bastion-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bastion-controller
  template:
    metadata:
      labels:
        app: bastion-controller
    spec:
      containers:
        - name: bastion-controller
          image: ghcr.io/bastionmania/bastionmania/bastionresourcecontroller:dev
          imagePullPolicy: Always
      serviceAccountName: bastion-controller
