Kubernetes/AdminManagement-deployement.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-management
  namespace: bastion
spec:
  ports:
  - port: 80 
    protocol: TCP
    targetPort: 8081
  selector:
    app: admin-management
  type: ClusterIP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-management
  namespace: bastion
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-management
  template:
    metadata:
      labels:
        app: admin-management
        need-dns: "true"
    spec:
      containers:
      - name: admin-management
        image: ghcr.io/bastionmania/bastionmania/adminmanagement:dev
        imagePullPolicy: Always
        ports:
        - name: http
          protocol: TCP
          containerPort: 8081
        volumeMounts:
          - name: mnt
            mountPath: /.env
            subPath: fichier.properties
      volumes:
      - name: mnt
        secret:
          secretName: gestionadmin.conf
      imagePullSecrets:
        - name: repogithub
