Kubernetes/BastionBackend-Db-Deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: bastionbackend
  namespace: bastion
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    pod-name: bastionbackend
  type: ClusterIP

---


apiVersion: apps/v1
kind: Deployment
metadata:
  name: bastionbackend
  namespace: bastion
spec:
  replicas: 1
  selector:
    matchLabels:
      pod-name: bastionbackend
  template:
    metadata:
      labels:
        pod-name: bastionbackend
    spec:
      containers:
        - name: bastionbackend
          image: ghcr.io/bastionmania/bastionmania/bastionbackend:dev
          imagePullPolicy: Always
          ports:
            - name: http
              protocol: TCP
              containerPort: 8080
          volumeMounts:
            - name: mnt
              mountPath: /.env
              subPath: fichier.properties
      imagePullSecrets:
        - name: repogithub
      volumes:
        - name: mnt
          secret:
            secretName: gestionbastionbackend.conf
