Kubernetes/BastionBackend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bastionbackend
  namespace: bastion
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bastionbackend
  template:
    metadata:
      labels:
        app: bastionbackend
        need-dns: "true"
    spec:
      containers:
        - name: bastionbackend
          image: ghcr.io/bastionmania/bastionmania/bastionbackend:dev
          imagePullPolicy: Always
          ports:
            - name: http
              protocol: TCP
              containerPort: 8080
      imagePullSecrets:
        - name: repogithub
---
apiVersion: v1
kind: Service
metadata:
  name: bastionbackend
  namespace: bastion
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: bastionbackend
  type: ClusterIP
