Kubernetes/BastionInstancieur-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bastion-instancieur-deployment
  namespace: bastion
  labels:
    app: bastion-instancieur
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bastion-instancieur
  template:
    metadata:
      labels:
        app: bastion-instancieur
    spec:
      containers:
        - name: bastion-instancieur
          image: ghcr.io/bastionmania/bastionmania/bastioninstancieur:dev
          imagePullPolicy: Always
      serviceAccountName: bastion-instancieur
---
apiVersion: v1
kind: Service
metadata:
  name: bastion-instancieur
  namespace: bastion
spec:
    selector:
        app: bastion-instancieur
    ports:
        - protocol: TCP
          port: 80
          targetPort: 9000
