Kubernetes/Front-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: front
  namespace: bastion
spec:
  ports:
  - port: 80 
    protocol: TCP
    targetPort: 80
  selector:
    app: front
  type: ClusterIP

---


apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
  namespace: bastion
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
      - name: front
        image: "ghcr.io/bastionmania/bastionmania/usermanagement:dev"
        imagePullPolicy: Always
        ports:
        - name: http
          protocol: TCP
          containerPort: 80
      imagePullSecrets:
        - name: repogithub
