Kubernetes/Kong-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: kong
  namespace: bastion
spec:
  ports:
  - name: proxy
    port: 80
    protocol: TCP
    targetPort: 8000
  - name: proxy-tls
    port: 443
    protocol: TCP
    targetPort: 8443
  - name: admin
    port: 8001
    protocol: TCP
    targetPort: 8001
  - name: admin-tls
    port: 8444
    protocol: TCP
    targetPort: 8444
  selector:
    pod-name: kong
  type: LoadBalancer

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: kong
  namespace: bastion
  labels:
    app: kong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kong
  template:
    metadata:
      labels:
        app: kong
        need-dns: "true"
    spec:
      containers:
      - name: kong
        image: "docker.io/francois238/kongoidc:12.0"
        imagePullPolicy: IfNotPresent
        ports:
        - name: proxy
          protocol: TCP
          containerPort: 8000
        - name: proxy-tls
          protocol: TCP
          containerPort: 8443
        - name: admin
          protocol: TCP
          containerPort: 8001
        - name: admin-tls
          protocol: TCP
          containerPort: 8444
