Kubernetes/UserManagement-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-management
  namespace: bastion
spec:
  ports:
  - port: 80 
    protocol: TCP
    targetPort: 8082
  selector:
    pod-name: user-management
  type: ClusterIP

---


apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-management
  namespace: bastion
  labels:
    app: user-management
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-management
  template:
    metadata:
      labels:
        app: user-management
        need-dns: "true"
    spec:
      containers:
      - name: user-management
        image: ghcr.io/bastionmania/bastionmania/usermanagement:dev
        imagePullPolicy: Always
        ports:
        - name: http
          protocol: TCP
          containerPort: 8082
        volumeMounts:
          - name: mnt
            mountPath: /home/runner/app/.env
            subPath: fichier.properties
      volumes:
      - name: mnt
        secret:
          secretName: gestionuser.conf
